# hok

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  COPYING  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: cicd.yml
crates/archive/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  console.rs  error.rs  indicator.rs  lib.rs  main.rs
crates/cli/src/cmd/: bucket.rs  cache.rs  cat.rs  cleanup.rs  config.rs  hold.rs  home.rs  info.rs  install.rs  list.rs  mod.rs  search.rs  status.rs  unhold.rs  update.rs  upgrade.rs
crates/core/: Cargo.toml
crates/core/src/: apps.rs  bucket.rs  cache.rs  config.rs  constants.rs  dependency.rs  error.rs  fs.rs  git.rs  http.rs  indicator.rs  lib.rs  log.rs  manifest.rs  package.rs  persist.rs  scoop_impl.rs  search.rs  session.rs  spdx.rs  sys.rs  update.rs  utils.rs
crates/core/src/manager/: apps.rs  buckets.rs  cache.rs  mod.rs  persist.rs
crates/core/src/manifest/: hashstring.rs  license.rs  mod.rs  url.rs
crates/core/src/model/: app.rs  bucket.rs  cache.rs  config.rs  manifest.rs  mod.rs
crates/core/src/ops/: app.rs  install.rs  mod.rs  search.rs
crates/core/src/util/: archive.rs  fs.rs  git.rs  mod.rs
crates/hash/: Cargo.toml  README.md
crates/hash/benches/: bench.rs  md5.rs  sha1.rs  sha256.rs  sha512.rs
crates/hash/src/: lib.rs  md5.rs  sha1.rs  sha256.rs  sha512.rs
crates/hok/: Cargo.toml  README.md
crates/hok/src/: clap_app.rs
crates/hok/src/cmd/: bucket.rs  cat.rs  cleanup.rs  hold.rs  home.rs  info.rs  install.rs  unhold.rs  update.rs
crates/libscoop/: Cargo.toml  LICENSE-MIT  README.md
crates/libscoop/src/: bucket.rs  cache.rs  config.rs  constant.rs  env.rs  error.rs  event.rs  lib.rs  operation.rs  persist.rs  psmodule.rs  session.rs  shim.rs  shortcut.rs
crates/libscoop/src/internal/: archive.rs  dag.rs  env.rs  fs.rs  git.rs  mod.rs  network.rs  os.rs  path.rs  tokio_util.rs
crates/libscoop/src/package/: download.rs  manifest.rs  mod.rs  query.rs  resolve.rs  sync.rs
crates/scoop_hash/: Cargo.toml  README.md
crates/scoop_hash/benches/: md5.rs  sha1.rs  sha256.rs  sha512.rs
crates/scoop_hash/src/: lib.rs  sha256.rs  sha512.rs
crates/scoop_hash/src/rustcrypto/: md5.rs  mod.rs  sha1.rs  sha256.rs  sha512.rs
crates/scoop_hash/src/selfcontained/: md5.rs  mod.rs  sha1.rs  sha256.rs  sha512.rs
lib/archive/: Cargo.toml
scripts/benchmark/: README.md  bench.ps1.template  generate.ps1  sandbox.wsb.template  start.cmd
src/: app.rs  apps.rs  bucket.rs  buckets.rs  cache.rs  clap_app.rs  cli.rs  config.rs  cui.rs  error.rs  fs.rs  git.rs  http.rs  lib.rs  log.rs  main.rs  manifest.rs  persist.rs  search.rs  spdx.rs  sys.rs  update.rs  util.rs  utils.rs  versions.rs
src/cmd/: bucket.rs  cache.rs  cat.rs  cleanup.rs  completions.rs  config.rs  hold.rs  home.rs  info.rs  install.rs  list.rs  mod.rs  search.rs  unhold.rs  uninstall.rs  update.rs  upgrade.rs
