[package]
name = "hok"
description = "Hok is a CLI implementation of Scoop in Rust"
homepage = "https://github.com/chawyehsu/hok"
version = "0.1.0-beta.6"
authors = ["Chawye Hsu <su+cratesio@chawyehsu.com>"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"

[workspace]
members = ["crates/libscoop", "crates/scoop_hash"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "hok"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["wrap_help", "cargo"] }
crossterm = "0.26"
env_logger = "0.8.3"
indicatif = "0.17.5"
regex = "1.5.3"
remove_dir_all = "0.7.0"

[dependencies.libscoop]
version = "0.1.0-beta.6"
features = ["rustcrypto-hash"]
path = "./crates/libscoop"

[profile.release]
debug = false
lto = "fat"
panic = "abort"
opt-level = 3
strip = "symbols"
codegen-units = 1

[profile.release-debug]
inherits = "release"
debug = true
strip = false
