[package]
name = "scoop-cli"
description = "The Scoop Windows command line installer rewritten in Rust"
homepage = "https://github.com/chawyehsu/scoop-rs"
version = "0.1.0"
authors = ["Chawye Hsu <chawyehsu@hotmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
clap = "2.33.3"
env_logger = "0.8.3"
once_cell = "1.7.2"
regex = "1.5.3"
remove_dir_all = "0.7.0"
scoop-core = { version = "0.1.0", path = "../core" }
serde_json = "1.0.64"
sysinfo = "0.18.0"

[[bin]]
name = "scoop"
path = "src/main.rs"
