[package]
name = "scoop-cli"
description = "A Rusty Scoop"
homepage = "https://github.com/chawyehsu/scoop-rs"
version = "0.1.0"
authors = ["Chawye Hsu <su+cratesio@chawyehsu.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "scoop"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
clap = "2.33.3"
console = "0.15.1"
env_logger = "0.8.3"
futures = "0.3.24"
indicatif = "0.17.0"
log = "0.4.14"
once_cell = "1.7.2"
regex = "1.5.3"
remove_dir_all = "0.7.0"
reqwest = { version = "0.11.18", features = ["stream"] }
scoop-core = { version = "0.1.0", path = "../core" }
sysinfo = "0.29.0"
termcolor = "1.1"
