[package]
name = "scoop-core"
description = "The Scoop Windows command line installer rewritten in Rust"
homepage = "https://github.com/chawyehsu/scoop-rs"
version = "0.1.0"
authors = ["Chawye Hsu <chawyehsu@hotmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
dirs = "3.0.1"
futures = "0.3.14"
git2 = "0.13.17"
glob = "0.3.0"
indexmap = "1.6.2"
log = "0.4.14"
once_cell = "1.7.2"
regex = "1.5.3"
remove_dir_all = "0.7.0"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
sysinfo = "0.18.0"
