[package]
name = "scoop-hash"
description = "Hash library for scoop-rs"
version = "0.1.0"
authors = ["Chawye Hsu <chawyehsu@hotmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[[bench]]
name = "md5"
path = "benches/md5.rs"

[[bench]]
name = "sha1"
path = "benches/sha1.rs"

[[bench]]
name = "sha256"
path = "benches/sha256.rs"

[[bench]]
name = "sha512"
path = "benches/sha512.rs"
