[package]
name = "libscoop"
description = "Rust library implementation of Scoop"
homepage = "https://github.com/chawyehsu/hok"
documentation = "https://docs.rs/libscoop"
version = "0.1.0-beta.3"
authors = ["Chawye Hsu <su+cratesio@chawyehsu.com>"]
categories = ["command-line-utilities"]
keywords = ["package-manager", "windows", "scoop"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"

[dependencies]
chrono = "0.4"
curl = { version = "0.4", features = ["static-curl"] }
dirs = "5.0.1"
flume = "0.10"
futures = { version = "0.3", features = ["thread-pool"] }
git2 = "0.17.2"
log = "0.4"
once_cell = "1.18.0"
rayon = "1.7.0"
regex = "1.5.3"
remove_dir_all = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dependencies.scoop-hash]
version = "0.1.0-beta.3"
path = "../scoop_hash"

[features]
default = []
rustcrypto-hash = ["scoop-hash/rustcrypto"]

# Archive
# infer = "0.9.0"
# zip = "0.6.2"
