[package]
name = "libscoop"
description = "Rust library implementation of Scoop"
homepage = "https://github.com/chawyehsu/hok"
documentation = "https://docs.rs/libscoop"
version = "0.1.0-beta.6"
authors = ["Chawye Hsu <su+cratesio@chawyehsu.com>"]
categories = ["command-line-utilities"]
keywords = ["package-manager", "windows", "scoop"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"

[dependencies]
chrono = "0.4"
curl = { version = "0.4", features = ["static-curl"] }
dirs = "5.0.1"
flume = "0.10"
futures = { version = "0.3", features = ["thread-pool"] }
git2 = "0.19.0"
log = "0.4"
once_cell = "1.18.0"
rayon = "1.7.0"
regex = "1.5.3"
remove_dir_all = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
thiserror = "1.0"

# Archive
# infer = "0.9.0"
# zip = "0.6.2"

[dependencies.scoop-hash]
version = "0.1.0-beta.6"
path = "../scoop_hash"

[target.'cfg(windows)'.dependencies]
junction = "1.0.0"
winreg = "0.50"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[features]
default = []
rustcrypto-hash = ["scoop-hash/rustcrypto"]
