[package]
name = "scoop-hash"
description = "Hashing library for libscoop"
homepage = "https://github.com/chawyehsu/hok"
version = "0.1.0-beta.5"
authors = ["Chawye Hsu <su+cratesio@chawyehsu.com>"]
categories = ["cryptography"]
keywords = ["hash", "scoop"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60.0"
readme = "README.md"

[[bench]]
name = "md5"
path = "benches/md5.rs"
harness = false

[[bench]]
name = "sha1"
path = "benches/sha1.rs"
harness = false

[[bench]]
name = "sha256"
path = "benches/sha256.rs"
harness = false

[[bench]]
name = "sha512"
path = "benches/sha512.rs"
harness = false

[dependencies]
md-5 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
criterion = "0.4"

[features]
default = []
# The "rustcrypto" feature enables hash implementations from RustCrypto's crates.
rustcrypto = ["md-5", "sha1", "sha2"]
